live-prop-test-macros/tests/compile_fail/old_inside_old.stderr
error: it doesn't make sense to use `old` inside another `old` expression
 --> $DIR/old_inside_old.rs:3:34
  |
3 | #[live_prop_test(postcondition = "old(old(true))")]
  |                                  ^^^^^^^^^^^^^^^^
